# lfi-bind

./: .gitignore  EXAMPLE.md  README.md  go.mod  go.sum  main.go  meson.build
embed/: lib.h.in  lib.inc.s.in  lib_init.c.in  lib_init.h.in  lib_trampolines.S.in
examples/: common.mk  meson.build  setup.sh
examples/add/: Makefile  main.c  meson.build
examples/add-vscript/: main.c  meson.build  symbols.map.txt
examples/add/libadd/: meson.build
examples/callback/: main.c  meson.build
examples/callback/libcb/: cb.c  meson.build
examples/memory/: lib.c  main.c  meson.build
examples/multi/: Makefile  main.c  meson.build
examples/multi/libbar/: bar.c  meson.build
examples/multi/libfoo/: foo.c  meson.build
examples/setjmp/: lib.c  main.c  meson.build
examples/so/: main.c  meson.build
examples/so/libadd/: meson.build
examples/thread/: lib.c  main.c  meson.build
subprojects/: argtable3.wrap  lfi-runtime.wrap
